--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-baseURL = "https://HostileNinja72.github.io/"
+baseURL = "https://darkn3ssy.github.io/"
 
 # Change the default theme to be use when building the site with Hugo
 theme = "LoveIt"
 
 # website title
-title = "HostileNinja72's Blog"
+title = "0xB4tm4n's Blog"
 
 # language code ["en", "zh-CN", "fr", "pl", ...]
 languageCode = "en"
@@ -32,9 +32,9 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 
 # Author config
 [author]
-  name = "HostileNinja72"
-  email = "soufianessahli@proton.me"
-  link = "https://HostileNinja72.github.io/"
+  name = "0xB4tm4n"
+  email = "yassir.sd02@gmail.com"
+  link = "https://darkn3ssy.github.io/"
 
 # Menu config
 [menu]
@@ -77,7 +77,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   #  date format
   dateFormat = "2006-01-02"
   # website title for Open Graph and Twitter Cards
-  title = "HostileNinja72's blog"
+  title = "0xB4tm4n's blog"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   description = "$ sudo apt install pwntools"
   # website images for Open Graph and Twitter Cards
@@ -94,7 +94,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       # URL of the LOGO
       logo = ""
       # title name
-      name = "HostileNinja72"
+      name = "0xB4tm4n"
       # you can add extra information before the name (HTML format is supported), such as icons
       pre = ""
       # you can add extra information after the name (HTML format is supported), such as icons
@@ -185,7 +185,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       # Gravatar Email for preferred avatar in home page
       gravatarEmail = ""
       # URL of avatar shown in home page
-      avatarURL = "https://avatars.githubusercontent.com/u/77463686?v=4"
+      avatarURL = "https://avatars.githubusercontent.com/u/90354895?v=4"
       
       #  title shown in home page (HTML format is supported)
       title = "Blogs"
@@ -208,10 +208,10 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 
   # Social config about the author
   [params.social]
-    GitHub = "HostileNinja72"
-    Discord = "hostileninja72"
+    GitHub = "0xB4tm4n"
+    Discord = "0xB4tm4n"
     #RootMe= ""
-    Email = "soufianessahli@proton.me"
+    Email = "yassir.sd02@gmail.com"
     #RSS = true # 
 
   #  Page global config
