--- a/config.toml
+++ b/config.toml
@@ -78,7 +78,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   # website title for Open Graph and Twitter Cards
   title = "0xB4tm4n's blog"
   # website description for RSS, SEO, Open Graph and Twitter Cards
-  description = "$ sudo apt-get update"
+  description = "$ Hi I am 0xB4tm4n , Welcome to my Blog "
   # website images for Open Graph and Twitter Cards
   images = ["/logo.png"]
 
@@ -189,7 +189,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       #  title shown in home page (HTML format is supported)
       title = "Blogs"
       # subtitle shown in home page (HTML format is supported)
-      subtitle = "$ sudo apt-get update"
+      subtitle = "$ Hi I am 0xB4tm4n , Welcome to my Blog"
       # whether to use typeit animation for subtitle
       typeit = true
       # whether to show social links
